--- a/views/success.ejs
+++ b/views/success.ejs
@@ -56,6 +56,7 @@
     <div class="data">
         <p>Country: <b><%= userCountry %></b></p>
         <p>User ID: <b><%= userId %></b></p>
+        <p>Request ID: <b><%= requestId %></b></p>
     </div>
 </div>
 </body>
